解决【集团版】【工单查询】应该能查询整个集团项目的所有工单;以及集团版项目版的isgroup字段的修改区分,全局保存判断!

--- a/OpticalValleyUnite/Classes/UI/AllWorkUnitQuery/ViewController/YQAllWorkUnitScreen.storyboard
+++ b/OpticalValleyUnite/Classes/UI/AllWorkUnitQuery/ViewController/YQAllWorkUnitScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="V25-LM-q3n">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="V25-LM-q3n">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -161,10 +161,10 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XPb-CJ-wOo">
-                                                        <rect key="frame" x="364" y="7" width="40" height="30"/>
+                                                        <rect key="frame" x="344" y="7" width="60" height="30"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="40" id="4Bd-Go-lqe"/>
+                                                            <constraint firstAttribute="width" constant="60" id="4Bd-Go-lqe"/>
                                                             <constraint firstAttribute="height" constant="30" id="YJX-VD-A81"/>
                                                         </constraints>
                                                         <state key="normal" title="收起">
