巡查结果新版日历模块添加,实现新需求,调试完善实现ok

--- a/OpticalValleyUnite/Classes/UI/PatrolResult/ViewController/YQResultMapView.storyboard
+++ b/OpticalValleyUnite/Classes/UI/PatrolResult/ViewController/YQResultMapView.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cTv-s0-H4s">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cTv-s0-H4s">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,7 +14,7 @@
             <objects>
                 <navigationController id="cTv-s0-H4s" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="RIV-DJ-YKA">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -25,7 +25,7 @@
             </objects>
             <point key="canvasLocation" x="-1143" y="55"/>
         </scene>
-        <!--Result Map View Controller-->
+        <!--Data Source-->
         <scene sceneID="bOo-nn-ZT3">
             <objects>
                 <viewController id="gTC-38-O2U" customClass="YQResultMapViewController" customModule="OpticalValleyUnite" customModuleProvider="target" sceneMemberID="viewController">
@@ -37,19 +37,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DdC-kj-vOp" customClass="DateChooseView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="64" width="375" height="60"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DdC-kj-vOp" customClass="FSCalendar">
+                                <rect key="frame" x="0.0" y="64" width="375" height="300"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="fO6-ih-ei0"/>
+                                    <constraint firstAttribute="height" constant="300" id="fO6-ih-ei0"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="gTC-38-O2U" id="n3X-2a-dMP"/>
+                                    <outlet property="delegate" destination="gTC-38-O2U" id="QlB-T6-oWG"/>
+                                </connections>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QP9-C7-7UW" customClass="MAMapView">
-                                <rect key="frame" x="0.0" y="124" width="375" height="543"/>
+                                <rect key="frame" x="0.0" y="364" width="375" height="303"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qyf-iE-rEW">
-                                <rect key="frame" x="5" y="129" width="40" height="40"/>
+                                <rect key="frame" x="5" y="369" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="F76-2W-zqK"/>
                                     <constraint firstAttribute="height" constant="40" id="Lxg-yz-SDj"/>
@@ -59,15 +63,26 @@
                                     <action selector="RepositionButtonClick:" destination="gTC-38-O2U" eventType="touchUpInside" id="1AD-Kz-3yJ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vFn-ee-xxo">
+                                <rect key="frame" x="50" y="369" width="41" height="40"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <state key="normal" title="日期转换"/>
+                                <connections>
+                                    <action selector="dateModeButtonClick:" destination="gTC-38-O2U" eventType="touchUpInside" id="vn3-bV-Ol8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="vFn-ee-xxo" firstAttribute="leading" secondItem="qyf-iE-rEW" secondAttribute="trailing" constant="5" id="1WS-Kk-mhI"/>
                             <constraint firstAttribute="trailing" secondItem="DdC-kj-vOp" secondAttribute="trailing" id="BS4-ch-7jO"/>
                             <constraint firstItem="qyf-iE-rEW" firstAttribute="leading" secondItem="qPR-L2-vtd" secondAttribute="leading" constant="5" id="BWg-iO-gYF"/>
+                            <constraint firstItem="vFn-ee-xxo" firstAttribute="centerY" secondItem="qyf-iE-rEW" secondAttribute="centerY" id="L0D-dz-hYo"/>
                             <constraint firstItem="DdC-kj-vOp" firstAttribute="top" secondItem="hvI-Ue-Gfn" secondAttribute="bottom" id="Nmt-nW-i6K"/>
                             <constraint firstItem="qyf-iE-rEW" firstAttribute="top" secondItem="DdC-kj-vOp" secondAttribute="bottom" constant="5" id="Vrl-Pa-pwG"/>
                             <constraint firstItem="DdC-kj-vOp" firstAttribute="leading" secondItem="qPR-L2-vtd" secondAttribute="leading" id="YcG-Yj-WgM"/>
                             <constraint firstItem="QP9-C7-7UW" firstAttribute="top" secondItem="DdC-kj-vOp" secondAttribute="bottom" id="Z64-fH-Kdj"/>
+                            <constraint firstItem="vFn-ee-xxo" firstAttribute="height" secondItem="qyf-iE-rEW" secondAttribute="height" id="cHC-Q0-v3b"/>
                             <constraint firstAttribute="trailing" secondItem="QP9-C7-7UW" secondAttribute="trailing" id="gmr-SM-5zK"/>
                             <constraint firstItem="M7A-um-hXO" firstAttribute="top" secondItem="QP9-C7-7UW" secondAttribute="bottom" id="pLW-Cg-Tjg"/>
                             <constraint firstItem="QP9-C7-7UW" firstAttribute="leading" secondItem="qPR-L2-vtd" secondAttribute="leading" id="win-bJ-Erg"/>
@@ -75,13 +90,14 @@
                     </view>
                     <navigationItem key="navigationItem" id="cbB-SI-8ge"/>
                     <connections>
+                        <outlet property="calendarHeightConstraint" destination="fO6-ih-ei0" id="CKO-Hp-YLs"/>
+                        <outlet property="calendarView" destination="DdC-kj-vOp" id="xS5-02-47b"/>
                         <outlet property="mapView" destination="QP9-C7-7UW" id="kpj-qo-j4C"/>
-                        <outlet property="timeView" destination="DdC-kj-vOp" id="HVC-tC-WSs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="20z-Jz-mLx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-322" y="54"/>
+            <point key="canvasLocation" x="-388" y="53.523238380809602"/>
         </scene>
     </scenes>
     <resources>
